[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfleet"
version = "0.2.19"
description = "Local multi-agent worktree fleet manager"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentfleet = "agent_fleet.cli:main"

[tool.setuptools.packages.find]
include = ["agent_fleet*"]
